# tel_subscriptions_api

./: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  init_db.py  pyproject.toml
.github/workflows/: python.yml
src/: api.py  exceptions.py  logging.py  main.py
src/auth/: contoller.py  models.py  service.py
src/database/: core.py
src/entities/: customers.py  subscriptions.py  tokens.py  users.py
src/ping/: controller.py
src/subscriptions/: controller.py  models.py  service.py
src/user/: controller.py  models.py  service.py
tests/: test_auth.py
